--- a/README.html
+++ b/README.html
@@ -9,7 +9,7 @@
    Weby templates
   </h1>
   <p>
-   Weby templates are the best templates ever created.  They are absolutely incredibly easy things to work with.  They are made for lazy people.  They have 2 main benefits:
+   Weby templates are used in production on websites that have garnered over 500,000 uniques a month.  They are incredibly easy to work with.  They are the template language for lazy people.  They have 3 main benefits:
   </p>
   <ul>
    <li>
@@ -23,7 +23,7 @@
    </li>
   </ul>
   <p>
-   The main codebase is implemented in 100 source lines of code.  Extensive libraries only add just a couple hundred other lines of code. It is simple.  It is compiled and fast.  It is unicode compliant and safe.  You can be fully fluent within 5 minutes since it is just Python and transparent library.
+   The main codebase is implemented in 100 source lines of code.  Extensive libraries only add just a couple hundred other lines of code. It is simple.  It ensures that all tags have closing tags.  It is compiled and fast.  It is unicode compliant and safe.  You can be fully fluent within 5 minutes since it is just Python and a transparent library.
   </p>
   <h2>
    Easier
@@ -114,6 +114,11 @@
  This README is generated with Weby templates if you want more examples.
 </p>
 <p>
+ <code>
+  ./README.py | ./weby_templates/tools/beautifier.py > README.html
+ </code>
+</p>
+<p>
  Weby templates are written in Python, and they compile to bytecode.  
         
         Moreover, they utilize the complete Python stack, so you can use the Python debugger tools, source code checkers, and your nromal build process.
@@ -186,7 +191,9 @@
  FAQ
 </h2>
 <p>
- Q: I get this unicode error: 'Always work with Unicode', what is this?
+ <b>
+  Q: I get this unicode error: "Always work with Unicode", what is this?
+ </b>
 </p>
 <p>
  A: I love Python, but Python 2.x made some poor assumptions when it comes to unicode compliance which some other languages like Ruby do not suffer from.  It contains both str and unicode types, and their interaction can sometimes cause problems.
@@ -198,4 +205,17 @@
  <a href="http://www.joelonsoftware.com/articles/Unicode.html">
   http://www.joelonsoftware.com/articles/Unicode.html
  </a>
+</p>
+<p>
+ <b>
+  Q: I like that Django Templates constrain me.  It helps me ensure that I keep templates strictly within an MVC framework.  Can I do this with Weby Templates?
+ </b>
+</p>
+<p>
+ First, since it is possible and even easy for some calls in Django Templates to have side effects, so be aware that it only provides the illusion of constraints. In fact, database calls and state mutation can be embedded in the calls.  The template language merely encourages an MVC style which template writers often adhere to.
+</p>
+<p>
+ Second, in practice, we have used Weby Templates and similarly are encouraged to write in an MVC style due to the nature of the tool.  Mature app developers naturally have no compelling reason to violate the MVC framework, when it makes the most sense. Moreover, arguments are passed explicity to templates in the function arguments, unlike in Django where they are implicit and unpythonic, and the structure of with statements and accumulator naturally encourage an MVC style separation.
+        
+        Finally, since sometimes bits of html are generated in views (links, messages, etc), you can use the same template library and filters to generate these snippets as you use in your templates. Thus, you don't repeating yourself and have less, tighter code.  You do not need a separate file to generate a separate 1-line template, just add a 1-line function to your Python scripts.
 </p>
